@@ -1,3 +1,8 @@
+2007-10-06  Paul J Stevens <paul@nfg.nl>
+
+	* dbmail-imapsession.c, imapcommands.c:
+	make noop work again
+
 2007-10-05  Paul J Stevens <paul@nfg.nl>
 
 	* dbmail-imapsession.c, dbmail-imapsession.h, imapcommands.c:
